--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.7
   flutter_svg: ^2.0.10+1
+  just_audio: ^0.10.5
 
 dev_dependencies:
   flutter_test:
