--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   permission_handler: ^12.0.1
   speech_to_text: ^7.0.0
   audio_waveforms: ^1.0.5
+  video_player: ^2.8.1
+  string_similarity: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,7 @@ flutter:
   uses-material-design: true
   assets:
    - assets/
+   - assets/videos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
